--- a/index.html
+++ b/index.html
@@ -24,18 +24,27 @@ if (document.images) {
 }}
 
  //--></SCRIPT>
-
+<style >
+    body {
+        background-image: url("static/gold3.jpeg");
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-size: cover;
+    } 
+</style>
 </head>
-<body background="./art/leath02.jpg" text="blue">
+<body text="blue" >
+
+
 <div align="center" >
 <table >
 <tr >
-   <td width="300" ></td>
+   <td width="600" ></td>
    <td width="70%" >
 	<a href="consult.html" 
 	onmouseover="centerimg('titleimg','title02')"
  	onmouseout="centerimg('titleimg','title01')" />
-	   <img src="art/buttons/bttn-consult.gif" border="0" />
+	   <img src="static/buttons/bttn-consult.gif" border="0" />
 </td>
 </tr>
 
@@ -43,7 +52,7 @@ if (document.images) {
    <td ><a href="prsnnl.html"
 	onmouseover="centerimg('titleimg','title03')"
  	onmouseout="centerimg('titleimg','title01')" />
-<img src="art/buttons/bttn-person.gif" align="right" border="0" />
+<img src="static/buttons/bttn-person.gif" align="right" border="0" />
 </td> 
 		
 </tr>
@@ -52,13 +61,13 @@ if (document.images) {
    <td ><a href="history.htm"
 	onmouseover="centerimg('titleimg','title04')"
  	onmouseout="centerimg('titleimg','title01')" />
-<img src="art/buttons/bttn-history.gif" border="0" />
+<img src="static/buttons/bttn-history.gif" border="0" />
 </td> 
    <td rowspan="3">
 	<a href="index.html"
 	onmouseover="centerimg('titleimg','title01')"
  	onmouseout="centerimg('titleimg','title01')" />
-<img name="art/buttons/titleimg" src="art/title.gif" 
+<img name="static/buttons/titleimg" src="static/title.gif" 
 	   height="112" width="400" border="0" />
 	</a></td>
 </tr>
@@ -67,7 +76,7 @@ if (document.images) {
    <td ><a href="contact.html"
 	onmouseover="centerimg('titleimg','title05')"
  	onmouseout="centerimg('titleimg','title01')" />
-<img src="art/buttons/bttn-contact.gif" border="0" />
+<img src="static/buttons/bttn-contact.gif" border="0" />
 </td> 
 </tr>
 
@@ -75,7 +84,7 @@ if (document.images) {
    <td ><a href="intrst.htm"
 	onmouseover="centerimg('titleimg','title06')"
  	onmouseout="centerimg('titleimg','title01')" />
-<img src="art/buttons/bttn-intrst.gif" border="0" />
+<img src="static/buttons/bttn-intrst.gif" border="0" />
 </td> 
 </tr>
 
@@ -83,7 +92,7 @@ if (document.images) {
    <td ><a href="lnk.htm"
 	onmouseover="centerimg('titleimg','title07')"
  	onmouseout="centerimg('titleimg','title01')" />
-<img src="art/buttons/bttn-links.gif" align="right" border="0" >
+<img src="static/buttons/bttn-links.gif" align="right" border="0" >
 </td> 
    <td align="center"><b>Quality Through Experience</b></td>
 </tr>
@@ -93,7 +102,7 @@ if (document.images) {
    <td ><a href="http://www.friendenemyconspiracy.blogspot.com"
 	onmouseover="centerimg('titleimg','title08')"
  	onmouseout="centerimg('titleimg','title01')" />
-<img src="art/buttons/bttn-blog.gif" border="0" >
+<img src="static/buttons/bttn-blog.gif" border="0" >
 </td>
 </tr>
 </table>
